--- a/service.html
+++ b/service.html
@@ -9,7 +9,9 @@
   </head>
  
   <body>
-     <h1>Service page</p>
+     <h1>Service page</h1>
+     <p>adding new changes to service page</p>
+
      <p style="color: blue;">Paragraph one is blue.</p>
      <p style="color: red;">Paragraph two is also red.</p>
   </body>
